bug fix for desktop body overflow [ch1138]

--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,6 @@
   }
 }
 
-@media (min-width: 768px) {
-  body {
-    overflow: hidden;
-  }
-}
-
 .rdt {
   position: relative;
 }
